# compress-script

./: .gitignore  README.md  pyproject.toml
.github/workflows/: Release.yml
compress_script/: __main__.py  config.py  exception.py  lock.py  logger.py  progress.py
