[project]
name = "compress-script"
version = "0.1.0"
description = "compress-script"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aioshutil>=1.5",
    "filelock>=3.16.0",
    "loguru>=0.7.2",
    "msgspec>=0.18.6",
    "pytimedinput>=2.0.1",
    "rich>=13.8.0",
    "richuru>=0.1.1",
    "rtoml>=0.11.0",
    "tomli-w>=1.0.0",
]

[tool.uv]
dev-dependencies = [
    "basedpyright>=1.17.3",
    "mypy>=1.11.2",
    "pyinstaller>=6.10.0",
    "ruff>=0.6.4",
    "types-aiofiles>=24.1.0.20240626",
]

[tool.ruff]
line-length = 120
target-version = 'py312'

[tool.ruff.lint]
select = [
    'F',     # pyflakes
    'E',     # pycodestyle errors
    'W',     # pycodestyle warnings
    'C90',   # mccabe
    'I',     # isort
    'N',     # PEP8-naming
    'UP',    # pyupgrade
    'YTT',   # flake8-2020
    'ANN',   # flake8-annotations
    'ASYNC', # flake8-async
    'S',     # flake8-bandit
    'BLE',   # flake8-blind-except
    'FBT',   # flake8-boolean-trap
    'B',     # flake8-bugbear
    'A',     # flake8-builtins
    'COM',   # flake8-commas
    'C4',    # flake8-comprehensions
    'DTZ',   # flake8-datetimez
    'T10',   # flake8-debugger
    'EM',    # flake8-errmsg
    'FA',    # flake8-future-annotations
    'ISC',   # flake8-implicit-str-concat
    'ICN',   # flake8-import-conventions
    'PIE',   # flake8-pie
    'T20',   # flake8-print
    'PYI',   # flake8-pyi
    'Q',     # flake8-quotes
    'RSE',   # flake8-raise
    'RET',   # flake8-return
    'SLF',   # flake8-self
    'SLOT',  # flake8-slots
    'SIM',   # flake8-simplify
    'TID',   # flake8-tidy-imports
    'TCH',   # flake8-type-checking
    'ARG',   # flake8-unused-arguments
    'PTH',   # flake8-use-pathlib
    'ERA',   # eradicate
    'PD',    # pandas-vet
    'PGH',   # pygrep-hooks
    'PL',    # pylint
    'TRY',   # tryceratops
    'FLY',   # flynt
    'FAST',  # FastAPI
    'PERF',  # Perflint
    'FURB',  # refurb
    'RUF',   # Ruff-specific rules
]
ignore = [
    'E501',   # 过长的行由 ruff format 处理, 剩余的都是字符串
    'ANN101', # 由 type checker 自动推断
    'ANN102', # 由 type checker 自动推断
    'TRY003',
    'COM812', # 强制尾随逗号
    'TID252', # 相对导入
    'ISC001', # format warning
]
flake8-quotes = { inline-quotes = 'single', multiline-quotes = 'double' }

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ['id']

[tool.ruff.format]
quote-style = 'single'

[tool.basedpyright]
pythonVersion = "3.12"
pythonPlatform = "All"
typeCheckingMode = "standard"
